# mcuxsdk-middleware-zigbee

./: CMakeLists.txt  Kconfig  README.md  SCR.txt  SW-Content-Register.txt  requirements.txt  set_middleware_wireless_zigbee.cmake
BDB/: CMakeLists.txt  Kconfig
BDB/Source/NwkFormation/: bdb_nf.c
BDB/Source/TouchLink/: bdb_tl_common.c
BDB/Source/TransportKeyDecider/: bdb_tkd.c  bdb_tkd.h
ZCIF/: CMakeLists.txt  Kconfig
ZCIF/Source/: zcl_heap.c  zcl_reportScheduler.c
ZCL/: CMakeLists.txt  Kconfig
ZCL/Clusters/General/Source/: Groups.c
ZCL/Clusters/GreenPower/Source/: GreenPower.c  GreenPowerCommon.c  GreenPowerCustomCommandResponses.c  GreenPowerProxyCommissioningMode.c  GreenPowerProxyGPDHandler.c  GreenPowerProxyTableRequest.c  GreenPowerProxyTableResponse.c  GreenPowerSinkTableRequest.c  GreenPowerSinkTableResponse.c  GreenPower_internal.h
ZCL/Clusters/OTA/Include/: OTA.h
ZCL/Clusters/OTA/Source/: OTA.c  OTA_ClientUpgradeManager.c  OTA_client.c  OTA_common.c
ZPSAPL/Include/: zps_apl_aib.h  zps_apl_zdo.h  zps_apl_zdp.h
ZPSNWK/Include/: zps_nwk_sec.h
ZigbeeCommon/: CMakeLists.txt  Kconfig
ZigbeeCommon/Include/: ZQueue.h  portmacro_linux.h  tlv.h
ZigbeeCommon/Source/: ZQueue.c  appZpsExtendedDebug.c  port_linux.c  tlv.c
cmake/: NxpZbConfig.cmake  all_devices.cmake  config_check.cmake  defaults.cmake  extensions.cmake  python.cmake
cmake/presets/: CMakePresetsBase.json
cmake/toolchains/: armgcc.cmake
examples/: CMakeLists.txt  Kconfig
examples/zb_common/: app_common_ncp.h  app_console.c  app_ota_client.c  app_ota_client.h  app_ota_server.c  app_signals.c  app_signals.h  app_zigbee_config.c  app_zigbee_config_ncp.c  serial_link_cmds_ctrl.c  serial_link_cmds_ctrl.h  serial_link_cmds_wkr.c  serial_link_cmds_wkr.h  serial_link_ctrl.c  serial_link_ctrl.h  serial_link_ctrl_linux.c  serial_link_wkr.c  serial_link_wkr.h
examples/zigbee_coordinator/: CMakeLists.txt  README.md  app_config.cmake
examples/zigbee_coordinator/build_linux/: CMakeLists.txt  CreatePDUMLib.cmake  README.md  app_config.cmake
examples/zigbee_coordinator/presets/: CMakePresets_common.json  CMakePresets_frdmrw612.json  CMakePresets_rdrw612bga.json
examples/zigbee_coordinator/src/: app_coordinator.c  app_coordinator.h  app_coordinator_ncp.c  app_main.c  app_serial_commands.c  bdb_options.h  readme.txt  zps_gen.h
examples/zigbee_coordinator/src/linux/: app.h  app_node.c  linux_glue.c  linux_glue.h  pdum_gen_glue.c
examples/zigbee_coordinator_freertos/src/: app_main_freertos.c  readme.txt
examples/zigbee_coprocessor/src/: app_coordinator.c  app_start.c  build_version.sh  coordinator.zpscfg
examples/zigbee_ed_rx_off/src/: app_end_device_node.c  app_main.c  app_start.c  bdb_options.h  readme.txt
examples/zigbee_ed_rx_off_freertos/src/: app_main_freertos.c
examples/zigbee_ed_rx_on/: CMakeLists.txt  README.md  app_config.cmake
examples/zigbee_ed_rx_on/presets/: CMakePresets_common.json  CMakePresets_frdmrw612.json  CMakePresets_rdrw612bga.json
examples/zigbee_ed_rx_on/src/: app_end_device_node.c  app_main.c  app_serial_commands.c  readme.txt
examples/zigbee_ed_rx_on_freertos/src/: app_main_freertos.c
examples/zigbee_router/: CMakeLists.txt  README.md  app_config.cmake
examples/zigbee_router/build_linux/: CMakeLists.txt  README.md  app_config.cmake
examples/zigbee_router/presets/: CMakePresets_common.json  CMakePresets_frdmrw612.json  CMakePresets_rdrw612bga.json
examples/zigbee_router/src/: app_main.c  app_main.h  app_router_node.c  app_router_node_ncp.c  app_serial_commands.c  app_start.c  app_zcl_task.c  app_zcl_task.h  bdb_options.h  pdum_gen.h  readme.txt
examples/zigbee_router_freertos/src/: app_main_freertos.c  readme.txt
manifests/: middleware_nxp_zigbee_K32W1480_manifest_v3_14.xml  middleware_nxp_zigbee_MCXW716C_manifest_v3_14.xml  middleware_nxp_zigbee_RW612_manifest_v3_14.xml
platform/: CMakeLists.txt  Kconfig  crypto.c  zb_platform.h
platform/K32W0/platform/: console.c  timer.c  uart.c  uart_dma.c
platform/K32W1/: CMakeLists.txt  FreeRTOSConfig.h
platform/K32W1/framework/Common/: dbg.h
platform/K32W1/framework/PWRM/: PWRM_adapter.c
platform/K32W1/platform/: buttons.c  console.c  crypto.c  glue.c  timer.c  uart.c
platform/NCP_HOST/: CMakeLists.txt
platform/NCP_HOST/cmake/: NxpZbNcpHostConfig.cmake  mbedtls_git.cmake  mbedtls_sdk.cmake  pdum.cmake  utils.cmake
platform/NCP_HOST/cmake/toolchains/: arm-linux.cmake  x86_64-linux-gnu.cmake
platform/NCP_HOST/framework/Common/: MicroSpecific.h  glue.h
platform/NCP_HOST/framework/PDM/Source/Posix/: PDM_adapter.c
platform/NCP_HOST/framework/SecLib/Interface/: SecLib.h
platform/NCP_HOST/misc/: fsl_component_generic_list.h
platform/NCP_HOST/platform/Posix/: console.c  crypto.c  glue.c  uart.c
platform/RW612/: CMakeLists.txt  FreeRTOSConfig.h  legacy.cmake
platform/RW612/docs/: README.md
platform/RW612/platform/: leds.c  uart.c  zb_cmsis_nvic_virtual.h
platform/common/: console.c  crypto.c
platform/common/framework/Common/: dbg.h
tools/: CMakeLists.txt  Kconfig  excludeFile.sh
tools/OTA/: nxpzbota.py  version.txt
tools/PDUMConfig/Source/: PDUMConfig  PDUMConfig.py
tools/ZPSConfig/Source/: ZPSConfig.py
